--- a/1.md
+++ b/1.md
@@ -1,4 +1,6 @@
 # はじめに
+このページの目的
+C言語とC++ちょっとしたプログラムを作成できるようになる.
 
 ## C言語の復習 と C++
 
@@ -54,6 +56,23 @@ clang++ template.cpp -o cpp.out
 ./cpp.out
 
 ```
+## テスト
+これが最初からできれば読む必要はありません   
+C++ で fizz-buzzプログラムを作る. 
+```
+Fizz-Buzz
+i = 1 ~ n の全てに対して以下の処理を行う. 
+- i が3で割り切れるとき, Fizzと出力 
+- i が5で割り切れるとき, Buzzと出力 
+- i が3, 5の両方で割り切れるとき, FizzBuzzと出力
+- それ以外ではiをそのまま出力
+
+今回 nはscanf/cinで決めるようにしてください. 
+```
+新しくfizzbuzz.cppを自分で作成して 1から作ってみよう
+可能ならば引数iを取って, Fizz, Buzz, FizzBuzz, iを出力する
+関数が作れるとなお良い. 
+完成したらソースコードを齊藤に送ってください. 
 
 
 ## プログラミングのテンプレート
@@ -161,6 +180,7 @@ int main(void){
     - char   : 一文字
     - double : 倍精度浮動少数 (15桁ほどの少数)
     - float  : 単精度浮動少数 ( 7桁ほどの少数)
+    - void   : から, 何も入らない
 
     それぞれで表現できる範囲は考えて使おう. 
     これで表現できない数値は多倍長演算や組み合わせなどの工夫を行う必要がある. 
@@ -252,7 +272,17 @@ for(最初に実行する式;終了条件;更新式)
 ```
 とおなじ. 
 
-### テスト
+### 関数
+```
+戻値の型名 関数名(引数型1 引数1, 引数型2 引数2, ....)
+{
+    処理のまとまり
+    return 戻り値;
+}
+```
+のようにして, 処理をまとめられる
+例 gg
+## re:テスト
 C++ もしくは Cで fizz-buzzプログラムを作る. 
 ```
 Fizz-Buzz
@@ -261,6 +291,9 @@ i = 1 ~ n の全てに対して以下の処理を行う.
 - i が5で割り切れるとき, Buzzと出力 
 - i が3, 5の両方で割り切れるとき, FizzBuzzと出力
 - それ以外ではiをそのまま出力
+今回 nはscanf/cinで決めるようにしてください. 
 ```
-新しくfizzbuzz.cppを自分で作成して 1から作ってみよう
-
+新しくfizzbuzz.cppを自分で作成して 1から作ってみよう  
+可能ならば引数iを取って, Fizz, Buzz, FizzBuzz, iを出力する
+関数が作れるとなお良い.   
+完成したらソースコードを齊藤に送ってください
