--- a/1.md
+++ b/1.md
@@ -147,11 +147,11 @@ int main(void){
 ```
 
 ### 違いは?
-- #include <string> が追加
-- char str[1024] -> std::string str
+- #include \<string\> が追加  
+- char str[1024] -> std::string str  
     文字列を型として扱うため  
     オーバフローしないメリットもある
-- scanf -> std::cin
+- scanf -> std::cin  
     cout とだいたい同じ  
     読み取る値を型によって自動で判断してくれる  
     アドレスを引数に取らなくて良いのがいい
