--- a/2.md
+++ b/2.md
@@ -129,7 +129,9 @@ lambda式をつかって, グローバルに存在する配列を操作する関
 slackにリアクションを付けてください.
 
 ```
-#define N 10
+#include <iostream>
+#include <functional>
+static constexpr int N = 10;
 int array[] = {
     3, 1, 4, 1, 5, 9, 2, 6, 5, 3 
 }
