--- a/2.md
+++ b/2.md
@@ -135,7 +135,7 @@ static constexpr int N = 10;
 int array[] = {
     3, 1, 4, 1, 5, 9, 2, 6, 5, 3 
 }
-XXX map(YYY func){
+void map(XXX func){
     for(int i = 0; i < N; i++){
         array[i] = func(array[i]);
     }
