--- a/3.md
+++ b/3.md
@@ -424,7 +424,7 @@ int main(void){
     }
     // twiceの引数はDynamicArrayだが, 
     // 継承先のArrayも引数にとれる. 
-    twice(array, array.size());
+    twice(&array, array.size());
     return 0;
 }
 ```
