--- a/3.md
+++ b/3.md
@@ -411,20 +411,23 @@ class Array : public DynamicArray // : アクセス指定子  継承元
 };
 // DynamicArrayを二倍にする関数
 void twice(DynamicArray* array, unsigned int n){
-    for(int i = 0; i < n; i++){
+    for(unsigned int i = 0; i < n; i++){
         (*array)[i] *= 2;
     }
 }
 int main(void){
     // 継承して, 機能拡張することで, nを保持することが不要になった.  
     Array array(30);
-    for(int i = 0; i < array.size(); i++){
+    for(unsigned int i = 0; i < array.size(); i++){
         array[i] = i*i;
         std::cout << array[i] << std::endl;
     }
     // twiceの引数はDynamicArrayだが, 
     // 継承先のArrayも引数にとれる. 
     twice(&array, array.size());
+    for(unsigned int i = 0; i < array.size(); i++){
+        std::cout << array[i] << std::endl;
+    }
     return 0;
 }
 ```
