--- a/3.md
+++ b/3.md
@@ -431,3 +431,33 @@ int main(void){
     return 0;
 }
 ```
+
+今回の例では`public`で継承を宣言したため, 元のpublicメソッド, メンバも新しいインスタンスから呼び出せる.
+`public`以外で継承をすることはほとんどない.
+
+### virtual
+同名で継承先のメソッド名を作成したいときがある. 
+このようなメソッドをvirtualで宣言できる.
+```
+#include <iostream>
+struct AnimalImpl{
+    // virtualで宣言すると継承した時に同名, 同引数のメソッドを作れる. 
+    // = 0を入れると, 継承したクラスに実装しなければコンパイルエラーとなる. 
+    virtual void speak() = 0;
+};
+struct Dog: public AnimalImpl{
+    void speak(){ std::cout << "won!!" << std::endl; }
+};
+struct Cat: public AnimalImpl{
+    void speak(){ std::cout << "maow" << std::endl; }
+};
+int main(void){
+    //AnimalImpl animal; animal.speak(); // コンパイルエラー
+    Cat cat; cat.speak();
+    Dog dog; dog.speak();
+    return 0;
+}
+```
+
+この例のように = 0を代入しているものを`純粋仮想関数`といい, これがあるクラスを`抽象クラス`という. 　　
+抽象クラスはインスタンスを生成できない. 
