--- a/3.md
+++ b/3.md
@@ -19,8 +19,8 @@ typedef struct{
 } PersonalInformation;
 
 void print_information(PersonalInformation person){
-    printf("name   : %s\n", person.name);
-    printf("number : %s\n", person.student_number);
+    printf("name   : %s\n", person.name.c_str());
+    printf("number : %s\n", person.student_number.c_str());
     printf("height : %d\n", person.body_height);
     printf("weight : %f\n", person.body_weight);
     printf("bmi    : %f\n", person.bmi);
@@ -38,7 +38,7 @@ void compute_bmi(PersonalInformation * p){
 int main(void){
     PersonalInformation saito;
     saito.name = "Yohei Saito";
-    saito.student_number = "20w2043a"
+    saito.student_number = "20w2043a";
     saito.body_height = 173;
     saito.body_weight = 57.8;
     compute_bmi(&saito); // アドレスを求められるので, &でアドレスを渡す
@@ -66,8 +66,8 @@ C++
 ```
 #include <iostream>
 struct PersonalInformation{
-    char name[40];
-    char student_number[8];
+    std::string name;
+    std::string student_number;
     unsigned int body_height;
     float body_weight;
     float bmi;
@@ -76,14 +76,14 @@ struct PersonalInformation{
     void print_information();
 };
 
-void PersionalInformation::compute_bmi(){
+void PersonalInformation::compute_bmi(){
     // 自分自身に含まれる変数はthis->hogeをつかってアクセスできる. 
     this->bmi = this->body_weight / this->body_height / this->body_height;
 }
-void PersionalInformation::print_information(){
-    // コピペが可能なのでprintfを使うがcout でも良い
-    std::printf("name   : %s\n", this->name);
-    std::printf("number : %s\n", this->student_number);
+void PersonalInformation::print_information(){
+    // コピペが楽なのでprintfを使うがcout でも良い
+    std::printf("name   : %s\n", this->name.c_str());
+    std::printf("number : %s\n", this->student_number.c_str());
     std::printf("height : %d\n", this->body_height);
     std::printf("weight : %f\n", this->body_weight);
     std::printf("bmi    : %f\n", this->bmi);
@@ -93,7 +93,7 @@ void PersionalInformation::print_information(){
 int main(void){
     PersonalInformation saito;
     saito.name = "Yohei Saito";
-    saito.student_number = "20w2043a"
+    saito.student_number = "20w2043a";
     saito.body_height = 173;
     saito.body_weight = 57.8;
 
@@ -135,8 +135,8 @@ C++
 ```
 #include <iostream>
 class PersonalInformation{
-    char name[40];
-    char student_number[8];
+    std::string name;
+    std::string student_number;
     unsigned int body_height;
     float body_weight;
     float bmi;
@@ -145,14 +145,14 @@ class PersonalInformation{
     void print_information();
 };
 
-void PersionalInformation::compute_bmi(){
+void PersonalInformation::compute_bmi(){
     // 自分自身に含まれる変数はthis->hogeをつかってアクセスできる. 
     this->bmi = this->body_weight / this->body_height / this->body_height;
 }
-void PersionalInformation::print_information(){
-    // コピペが可能なのでprintfを使うがcout でも良い
-    std::printf("name   : %s\n", this->name);
-    std::printf("number : %s\n", this->student_number);
+void PersonalInformation::print_information(){
+    // コピペが簡単なのでprintfを使うがcout でも良い
+    std::printf("name   : %s\n", this->name.c_str());
+    std::printf("number : %s\n", this->student_number.c_str());
     std::printf("height : %d\n", this->body_height);
     std::printf("weight : %f\n", this->body_weight);
     std::printf("bmi    : %f\n", this->bmi);
@@ -162,7 +162,7 @@ void PersionalInformation::print_information(){
 int main(void){
     PersonalInformation saito;
     saito.name = "Yohei Saito";
-    saito.student_number = "20w2043a"
+    saito.student_number = "20w2043a";
     saito.body_height = 173;
     saito.body_weight = 57.8;
 
@@ -199,8 +199,8 @@ class は structとは違いclassの関数以外では,
 #include <iostream>
 class PersonalInformation{
     public:
-    char name[40];
-    char student_number[8];
+    std::string name;
+    std::string student_number;
     unsigned int body_height;
     float body_weight;
     private:
@@ -210,9 +210,32 @@ class PersonalInformation{
     void compute_bmi(); 
     void print_information();
 };
-    :
-    略
-    :
+void PersonalInformation::compute_bmi(){
+    // 自分自身に含まれる変数はthis->hogeをつかってアクセスできる. 
+    this->bmi = this->body_weight / this->body_height / this->body_height;
+}
+void PersonalInformation::print_information(){
+    // コピペが楽なのでprintfを使うがcout でも良い
+    std::printf("name   : %s\n", this->name.c_str());
+    std::printf("number : %s\n", this->student_number.c_str());
+    std::printf("height : %d\n", this->body_height);
+    std::printf("weight : %f\n", this->body_weight);
+    std::printf("bmi    : %f\n", this->bmi);
+}
+
+
+int main(void){
+    PersonalInformation saito;
+    saito.name = "Yohei Saito";
+    saito.student_number = "20w2043a";
+    saito.body_height = 173;
+    saito.body_weight = 57.8;
+
+    saito.compute_bmi();
+    //標準になるようにBMIを調整する
+    saito.bmi = 21.0; // コンパイルエラー変更できない
+    saito.print_information();
+}
 ```
 C++では`public:`から次の属性指定までの行すべてがpublicになる. 
 これで, 外からbmiを変更しようとした時にコンパイルエラーとなってくれる. 
