--- a/2.md
+++ b/2.md
@@ -127,7 +127,7 @@ int main(void){
 lambda式をつかって, グローバルに存在する配列を操作する関数をつくろう. 
 今回はソースコードを齊藤に送らなくていいですのでよみ終えたら, 
 slackにリアクションを付けてください.
-回答は(こちら)[2ans.cpp]から
+回答は[こちら](./2ans.cpp)から
 
 ```
 #include <iostream>
